# fires-and-clouds-sandbox

./: README.md  setup.cfg  setup.py
fires_and_clouds/: __init__.py  cloud_utils.py  satellite_scanning_geometry.py  utils.py
