[options]
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive


[bdist_rpm]
provides=fires_and_clouds
requires=numpy PyYAML scipy trollsift pytroll-schdule geopandas rasterio shapely pyproj fiona pyorbital
release=1

[bdist_wheel]
universal=1

[flake8]
max-line-length = 120

[coverage:run]
source = ./
#omit = 

